[package]
name = "ospf-framework-bpp3d-interface-renderer"
version = "0.0.0"
description = "bpp3d renderer"
authors = ["fuookami<fuookami@163.com>"]
license = "Apache-2.0"
repository = "https://github.com/fuookami/ospf"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["devtools", "dialog-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "*"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
