[package]
name = "ospf-framework-gantt-scheduling-interface-renderer"
version = "0.0.0"
description = "gantt renderer"
authors = ["fuookami<fuookami@163.com>"]
license = "Apache-2.0"
repository = "https://github.com/fuookami/ospf"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["dialog-open", "dialog-save", "path-all", "shell-open", "window-close", "window-create", "window-set-size", "window-set-title"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "*"

[features]
custom-protocol = ["tauri/custom-protocol"]
